; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/port/extr_win32_shmem.c_PGSharedMemoryNoReAttach.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/port/extr_win32_shmem.c_PGSharedMemoryNoReAttach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ShmemProtectiveRegion = common dso_local global i32* null, align 8
@UsedShmemSegAddr = common dso_local global i32* null, align 8
@IsUnderPostmaster = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PGSharedMemoryNoReAttach() #0 {
  %1 = load i32*, i32** @ShmemProtectiveRegion, align 8
  %2 = icmp ne i32* %1, null
  %3 = zext i1 %2 to i32
  %4 = call i32 @Assert(i32 %3)
  %5 = load i32*, i32** @UsedShmemSegAddr, align 8
  %6 = icmp ne i32* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @Assert(i32 %7)
  %9 = load i32, i32* @IsUnderPostmaster, align 4
  %10 = call i32 @Assert(i32 %9)
  store i32* null, i32** @UsedShmemSegAddr, align 8
  %11 = call i32 (...) @PGSharedMemoryDetach()
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @PGSharedMemoryDetach(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
